commented out code that doesn't work and added returns to function calls

--- a/output/index.html
+++ b/output/index.html
@@ -1,14 +1,20 @@
 <p> [
      {
-          "name": "Joshua Bidwell",
+          "name": "asdfasdf",
           "id": 1,
-          "email": "jjbidwell262@gmail.com",
-          "github": "jjbidwell"
+          "email": "adfadf",
+          "github": "adsfasdf"
      },
      {
-          "name": "Ariana Walker",
+          "name": "adsfasdf",
           "id": 2,
-          "email": "4arianawalker@gmail.com",
-          "office": 69
+          "email": "asdfasdf",
+          "school": "asdfasdf"
+     },
+     {
+          "name": "adfasdf",
+          "id": 3,
+          "email": "adfasdf",
+          "office": null
      }
 ] </p>
