--- a/output/index.html
+++ b/output/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Intern Template</title>
+    <title>My Team</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
 
@@ -12,12 +12,12 @@
 
     <div id="manager" class="employee card">
         <div class="text-center text-light bg-info card-body">
-          <h2 class="card-title">{manager-name}</h2>
+          <h2 class="card-title">Joshua John Bidwell</h2>
           <h3 class="card-title"><i class="fas fa-user-tie"></i>Manager</h3>
         </div>
         <ul class="list-group list-group-flush">
-            <li class="list-group-item">Employee ID: {id}</li>
-          <li class="list-group-item">Email: <a href="mailto:jjbidwell262@gmail.com" target="_blank">{email}</a></li>
-          <li class="list-group-item">Office Number: {office-number}</li>
+            <li class="list-group-item">Employee ID: 1</li>
+          <li class="list-group-item">Email: <a href="mailto:jjbidwell262@gmail.com" target="_blank">jjbidwell262@gmail.com</a></li>
+          <li class="list-group-item">Office Number: 420</li>
         </ul>
       </div>
