--- a/output/index.html
+++ b/output/index.html
@@ -6,18 +6,62 @@
     <title>My Team</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
-
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 
-    <div id="manager" class="employee card">
+<div class="container">
+
+  <div class="row">
+    <div class="col col-sm-12 col-md-4 col-lg-3 card">
         <div class="text-center text-light bg-info card-body">
-          <h2 class="card-title">Joshua John Bidwell</h2>
+          <h2 class="card-title">Joshua Bidwell</h2>
           <h3 class="card-title"><i class="fas fa-user-tie"></i>Manager</h3>
         </div>
         <ul class="list-group list-group-flush">
-            <li class="list-group-item">Employee ID: 1</li>
+          <li class="list-group-item">Employee ID: 1</li>
           <li class="list-group-item">Email: <a href="mailto:jjbidwell262@gmail.com" target="_blank">jjbidwell262@gmail.com</a></li>
-          <li class="list-group-item">Office Number: 420</li>
+          <li class="list-group-item">Office Number: 69</li>
+        </ul>
+    </div>
+
+
+
+
+
+    <div class="col col-sm-12 col-md-4 col-lg-3 card">
+        <div class="text-center text-light bg-success card-body">
+          <h2 class="card-title">Ariana Walker</h2>
+          <h3 class="card-title"><i class="fas fa-laptop-code"></i> Engineer</h3>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Employee ID: 2</li>
+          <li class="list-group-item">Email: <a href="mailto:4arianaWalker@gmail.com" target="_blank">4arianaWalker@gmail.com</a></li>
+          <li class="list-group-item">Github: <a href="https://github.com/{github}" target="_blank">{github}</a></li>
+        </ul>
+    </div>
+
+
+    
+    
+      <div  class="col col-sm-12 col-md-4 col-lg-3 card">
+        <div class="text-center text-light bg-danger card-body">
+          <h2 class="card-title">Eric Bidwell</h2>
+          <h3 class="card-title"><i class="fas fa-mug-hot"></i> Intern</h3>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Employee ID: 3</li>
+          <li class="list-group-item">Email: <a href="mailto:N/A" target="_blank">N/A</a></li>
+          <li class="list-group-item">School: UCSD</li>
         </ul>
       </div>
+
+    </div>
+</div>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+</body>
+</html>
